--- a/app/views/parties/edit.html.erb
+++ b/app/views/parties/edit.html.erb
@@ -69,7 +69,7 @@
           Lodging
         </label>
 
-        <input type="text" id="lodging_id" name="lodging_id" placeholder="Lodging" class="form-control" value="<%= @party.lodging_id %>">
+        <%= select_tag(:lodging_id, options_from_collection_for_select(Lodging.all, :id, :name, @party.lodging_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-warning">
