--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -42,7 +42,7 @@
           City
         </label>
 
-        <input type="text" id="city_id" name="city_id" placeholder="City" class="form-control" value="<%= @party.city_id %>">
+        <%= select_tag(:city_id, options_from_collection_for_select(City.all, :id, :name, @party.city_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for start_date -->
