Replace raw foreign key value in activities with primary descriptors

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= activity.title %></td>
         <td><%= activity.notes %></td>
         <td><%= activity.cost_pp %></td>
-        <td><%= activity.city_id %></td>
+        <td><%= activity.city.name %></td>
         <td><%= activity.website %></td>
         <td>
           <a href="/activities/<%= activity.id %>" class="btn btn-primary">Show</a>
