Replace raw foreign key value in parties with primary descriptors

--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -25,7 +25,7 @@
         <td><%= party.city.name %></td>
         <td><%= party.start_date %></td>
         <td><%= party.end_date %></td>
-        <td><%= party.lodging_id %></td>
+        <td><%= party.lodging.name %></td>
         <td>
           <a href="/parties/<%= party.id %>" class="btn btn-primary">Show</a>
           <a href="/parties/<%= party.id %>/edit" class="btn btn-warning">Edit</a>
