--- a/app/views/attendees/edit.html.erb
+++ b/app/views/attendees/edit.html.erb
@@ -33,7 +33,7 @@
           Party
         </label>
 
-        <input type="text" id="party_id" name="party_id" placeholder="Party" class="form-control" value="<%= @attendee.party_id %>">
+        <%= select_tag(:party_id, options_from_collection_for_select(Party.all, :id, :name, @attendee.party_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-warning">
