--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -60,7 +60,7 @@
           City
         </label>
 
-        <input type="text" id="city_id" name="city_id" placeholder="City" class="form-control" value="<%= @restaurant.city_id %>">
+        <%= select_tag(:city_id, options_from_collection_for_select(City.all, :id, :name, @restaurant.city_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-warning">
