Replace raw foreign key value in restaurants with primary descriptors

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -21,7 +21,7 @@
       <tr>
         <td><%= restaurant.name %></td>
         <td><%= restaurant.website %></td>
-        <td><%= restaurant.meal_id %></td>
+        <td><%= restaurant.meal.meal %></td>
         <td><%= restaurant.cost_pp %></td>
         <td><%= restaurant.city_id %></td>
         <td>
