Replace foreign key text inputs in planned_events with dropdowns

--- a/app/views/planned_events/new.html.erb
+++ b/app/views/planned_events/new.html.erb
@@ -33,7 +33,7 @@
           Activity
         </label>
 
-        <input type="text" id="activity_id" name="activity_id" placeholder="Activity" class="form-control" value="<%= @planned_event.activity_id %>">
+        <%= select_tag(:activity_id, options_from_collection_for_select(Activity.all, :id, :title, @planned_event.activity_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-success">
