Replace foreign key text inputs in planned_events with dropdowns

--- a/app/views/planned_events/edit.html.erb
+++ b/app/views/planned_events/edit.html.erb
@@ -24,7 +24,7 @@
           Party
         </label>
 
-        <input type="text" id="party_id" name="party_id" placeholder="Party" class="form-control" value="<%= @planned_event.party_id %>">
+        <%= select_tag(:party_id, options_from_collection_for_select(Party.all, :id, :name, @planned_event.party_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for activity_id -->
