--- a/app/views/lodgings/edit.html.erb
+++ b/app/views/lodgings/edit.html.erb
@@ -51,7 +51,7 @@
           City
         </label>
 
-        <input type="text" id="city_id" name="city_id" placeholder="City" class="form-control" value="<%= @lodging.city_id %>">
+        <%= select_tag(:city_id, options_from_collection_for_select(City.all, :id, :name, @lodging.city_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for cost_night -->
