--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= restaurant.website %></td>
         <td><%= restaurant.meal.meal %></td>
         <td><%= restaurant.cost_pp %></td>
-        <td><%= restaurant.city_id %></td>
+        <td><%= restaurant.city.name %></td>
         <td>
           <a href="/restaurants/<%= restaurant.id %>" class="btn btn-primary">Show</a>
           <a href="/restaurants/<%= restaurant.id %>/edit" class="btn btn-warning">Edit</a>
