--- a/app/views/attendees/index.html.erb
+++ b/app/views/attendees/index.html.erb
@@ -17,7 +17,7 @@
       <% @attendees.each do |attendee| %>
       <tr>
         <td><%= attendee.user.email %></td>
-        <td><%= attendee.party_id %></td>
+        <td><%= attendee.party.name %></td>
         <td>
           <a href="/attendees/<%= attendee.id %>" class="btn btn-primary">Show</a>
           <a href="/attendees/<%= attendee.id %>/edit" class="btn btn-warning">Edit</a>
