Replace raw foreign key value in lodgings with primary descriptors

--- a/app/views/lodgings/index.html.erb
+++ b/app/views/lodgings/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= lodging.name %></td>
         <td><%= lodging.url %></td>
         <td><%= lodging.address %></td>
-        <td><%= lodging.city_id %></td>
+        <td><%= lodging.city.name %></td>
         <td><%= lodging.cost_night %></td>
         <td>
           <a href="/lodgings/<%= lodging.id %>" class="btn btn-primary">Show</a>
