Display associated collections on show pages

--- a/app/views/lodgings/show.html.erb
+++ b/app/views/lodgings/show.html.erb
@@ -35,3 +35,34 @@
     </div>
   </div>
 </div>
+
+<!-- A Lodging has many parties -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Parties
+      </li>
+
+      <% @lodging.parties.each do |party| %>
+        <li class="list-group-item">
+          <a href="/parties/<%= party.id %>">
+            <%= party.name %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/parties/<%= party.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/parties/<%= party.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_party/<%= party.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
