--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -35,3 +35,34 @@
     </div>
   </div>
 </div>
+
+<!-- A Activity has many planned_events -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Planned Events
+      </li>
+
+      <% @activity.planned_events.each do |planned_event| %>
+        <li class="list-group-item">
+          <a href="/planned_events/<%= planned_event.id %>">
+            <%= planned_event.party_id %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/planned_events/<%= planned_event.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/planned_events/<%= planned_event.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_planned_event/<%= planned_event.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
