--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -63,6 +63,29 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_planned_event" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for party_id -->
+      <div class="form-group">
+        <label for="party_id" class="control-label">
+          Party
+        </label>
+
+        <%= select_tag(:party_id, options_from_collection_for_select(Party.all, :id, :name), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for activity_id -->
+      <input type="hidden" name="activity_id" value="<%= @activity.id %>">
+
+      <button class="btn btn-block btn-success">
+        Create Planned Event
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
