--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -15,7 +15,13 @@
       <dd><%= @activity.cost_pp %></dd>
 
       <dt>City</dt>
-      <dd><%= @activity.city_id %></dd>
+      <dd>
+        <% if @activity.city.present? %>
+          <a href="/cities/<%= @activity.city_id %>">
+            <%= @activity.city.name %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Website</dt>
       <dd><%= @activity.website %></dd>
