--- a/app/views/attendees/show.html.erb
+++ b/app/views/attendees/show.html.erb
@@ -6,10 +6,22 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>User</dt>
-      <dd><%= @attendee.user_id %></dd>
+      <dd>
+        <% if @attendee.user.present? %>
+          <a href="/users/<%= @attendee.user_id %>">
+            <%= @attendee.user.email %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Party</dt>
-      <dd><%= @attendee.party_id %></dd>
+      <dd>
+        <% if @attendee.party.present? %>
+          <a href="/parties/<%= @attendee.party_id %>">
+            <%= @attendee.party.name %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
