--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -6,10 +6,22 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Restaurant</dt>
-      <dd><%= @reservation.restaurant_id %></dd>
+      <dd>
+        <% if @reservation.restaurant.present? %>
+          <a href="/restaurants/<%= @reservation.restaurant_id %>">
+            <%= @reservation.restaurant.name %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Party</dt>
-      <dd><%= @reservation.party_id %></dd>
+      <dd>
+        <% if @reservation.party.present? %>
+          <a href="/parties/<%= @reservation.party_id %>">
+            <%= @reservation.party.name %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
