--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -21,9 +21,21 @@
       <tr>
         <td><%= restaurant.name %></td>
         <td><%= restaurant.website %></td>
-        <td><%= restaurant.meal.meal %></td>
+        <td>
+          <% if restaurant.meal.present? %>
+            <a href="/meal_times/<%= restaurant.meal.id %>">
+              <%= restaurant.meal.meal %>
+            </a>
+          <% end %>
+        </td>
         <td><%= restaurant.cost_pp %></td>
-        <td><%= restaurant.city.name %></td>
+        <td>
+          <% if restaurant.city.present? %>
+            <a href="/cities/<%= restaurant.city.id %>">
+              <%= restaurant.city.name %>
+            </a>
+          <% end %>
+        </td>
         <td>
           <a href="/restaurants/<%= restaurant.id %>" class="btn btn-primary">Show</a>
           <a href="/restaurants/<%= restaurant.id %>/edit" class="btn btn-warning">Edit</a>
