--- a/app/views/lodgings/index.html.erb
+++ b/app/views/lodgings/index.html.erb
@@ -3,6 +3,96 @@
     Lodgings
     <a href="/lodgings/new" class="btn btn-lg btn-success">New Lodging</a>
   </h1>
+</div><div class="row mb-1">
+  <div class="col-md-12">
+    <%= search_form_for @q, :class => collapse_search_form, :id => "lodgings_filters" do |f| %>
+      <p class="lead">Narrow results:</p>
+
+        <div class="form-group">
+    <%= f.label :name_cont, "Name contains" %>
+    <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
+  </div>
+
+<div class="form-group">
+  <%= f.label :cost_night, "Cost night" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :cost_night_gteq, :class => "form-control", :placeholder => "Cost night greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :cost_night_lteq, :class => "form-control", :placeholder => "Cost night less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+    <%= f.label :address_cont, "Address contains" %>
+    <%= f.text_field :address_cont, :class => "form-control", :placeholder => "Address contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :url_cont, "Url contains" %>
+    <%= f.text_field :url_cont, :class => "form-control", :placeholder => "Url contains" %>
+  </div>
+
+<div class="form-group">
+          <%= f.label :created_at, "Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='created_atgteqPicker'>
+                  <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='created_atlteqPicker'>
+                  <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#created_atgteqPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atlteqPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atgteqPicker').on("dp.change", function (e) {
+                  $('#created_atlteqPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#created_atlteqPicker').on("dp.change", function (e) {
+                  $('#created_atgteqPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+        <div class="form-group">
+      <%= f.label :city_name_cont, "City name contains" %>
+      <%= f.text_field :city_name_cont, :class => "form-control", :placeholder => "City name contains" %>
+    </div>
+
+<div class="form-group">
+      <%= f.label :parties_name_cont, "Party name contains" %>
+      <%= f.text_field :parties_name_cont, :class => "form-control", :placeholder => "Party name contains" %>
+    </div>
+
+      <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
+
+      <a href="/lodgings" class="btn btn-default btn-block mb-1">Clear filters</a>
+    <% end %>
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#lodgings_filters">
+      Show Filters
+    </a>
+  </div>
 </div>
 
 <div class="row">
